tests/core/ill-typed/bad-if-4.stella
language core;

fn main(x : Bool) -> Nat {
    return (if false then fn(x : Bool) { return 0; } else fn(x : Bool) { return true; } )(true);
}